--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,10 @@ body
     overflow:hidden;
 }
 
+.navigation.active{
+    width: 80px;
+
+}
 .navigation ul{
 
     position: absolute;
@@ -50,14 +54,15 @@ body
 .navigation ul li{
 
     position: relative;
-    width: 200%;
+    width: 100%;
     list-style: none;
     border-top-left-radius: 30px;
     border-bottom-left-radius: 30px;
 
 }
 
-.navigation ul li:hover{
+.navigation ul li:hover,
+.navigation ul li.hovered{
     background: var(--white);
 }
 
@@ -78,7 +83,8 @@ body
     color: var(--white);
 }
 
-.navigation ul li:hover a{
+.navigation ul li:hover a,
+.navigation ul li.hovered a{
 
     color: var(--blue);
 
@@ -108,3 +114,120 @@ body
     white-space: nowrap;
 }
 
+/* curve outside*/
+
+.navigation ul li:hover a::before,
+.navigation ul li.hovered a::before{
+
+    content: '';
+    position: absolute;
+    right: 0;
+    top: -50px;
+    width: 50px;
+    height: 50px;
+    background: transparent;
+    border-radius: 50%;
+    box-shadow: 35px 35px 0 10px var(--white);
+    pointer-events: none;
+
+
+}
+.navigation ul li:hover a::after,
+.navigation ul li.hovered a::after{
+
+    content: '';
+    position: absolute;
+    right: 0;
+    bottom: -50px;
+    width: 50px;
+    height: 50px;
+    background: transparent;
+    border-radius: 50%;
+    box-shadow: 35px -35px 0 10px var(--white);
+    pointer-events: none;
+    
+
+}
+
+/*main*/
+
+.main{
+    position: absolute;
+    width: calc(100% - 300px);
+    left: 300px;
+    min-height: 100vh;
+    background: var(--white); 
+    transition: 0.5s;
+}
+
+.topbar{
+    width: 100%;
+    height: 60px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 10px;
+}
+
+.toggle{
+    position: relative;
+    top: 0;
+    width: 60px;
+    height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2.5em;
+    cursor: pointer;
+}
+
+.search{
+
+    position: relative;
+    width: 400px;
+    margin: 0 10px;
+}
+
+.search label{
+
+    position: relative;
+    width: 100%;
+}
+
+.search label input{
+    width: 100%;
+    height: 40px;
+    border-radius: 40px;
+    padding: 5px 20px;
+    padding-left: 35px;
+    font-size: 18px;
+    outline: none;
+    border: 1px solid var(--black2);
+
+}
+
+.search label ion-icon{
+    position: absolute;
+    top: 0;
+    left: 10px;
+    font-size: 1.2em;
+
+}
+
+.user{
+    position: relative;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    overflow: hidden;
+    cursor: pointer;
+}
+
+.user img{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
