--- a/css/style.css
+++ b/css/style.css
@@ -160,6 +160,12 @@ body
     transition: 0.5s;
 }
 
+.main.active{
+    width: calc(100% - 80px);
+    left: 80px;
+
+}
+
 .topbar{
     width: 100%;
     height: 60px;
@@ -230,4 +236,58 @@ body
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+.cardBox{
+
+    position: relative;
+    width: 100%;
+    padding: 20px;
+    grid-template-columns: repeat(4,1fr);
+    display: grid;
+    grid-gap: 30px;
+
+}
+
+.cardBox .card{
+    position: relative;
+    background: var(--white);
+    padding: 30px;
+    border-radius: 20px;
+    display: flex;
+    justify-content: space-between;
+    cursor: pointer;
+    box-shadow: 0 7px 25px rgba(0, 0, 0, 0.08);
+}
+
+.cardBox .card .numbers
+{
+    position: relative;
+    font-weight: 500;
+    font-size: 2.5em;
+    color: var(--blue);
+}
+
+.cardBox .card .cardName{
+    color: var(--black2);
+    font-size: 1.1em;
+    margin-top: 5px;
+
+}
+
+.cardBox .card .iconBx{
+    font-size: 3.5em;
+    color: var(--black2);
+}
+
+.cardBox .card:hover{
+    background: var(--blue);
+}
+
+.cardBox .card:hover .numbers,
+.cardBox .card:hover .cardName,
+.cardBox .card:hover .iconBx{
+    
+    color: var(--white);
+
 }
