--- a/css/style.css
+++ b/css/style.css
@@ -481,6 +481,10 @@ body
         left: -300;
 
     }
+    .navigation.active{
+        left: 0;
+        width: 300px;
+    }
     .main{
 
         width: 100%;
@@ -488,5 +492,57 @@ body
     }
     .main.active{
         
+        left: 300px;
+
+
+    }
+    .cardBox{
+        grid-template-columns: repeat(2,1fr);
+    }
+}
+
+@media (max-width: 768px){
+    .details{
+        grid-template-columns: repeat(1,1fr);
+    }
+    .recentOrders{
+        overflow-x: auto;
+    }
+
+    .status.inprogress{
+        white-space:nowrap;
+    }
+}
+
+@media (max-width: 480px){
+
+    .cardBox{
+        grid-template-columns: repeat(1,1fr);
+    }
+
+    .cardHeader h2{
+        font-size: 20px;
+    }
+    .user{
+        min-width: 40px;
+    }
+    .navigation{
+        width: 100%;
+        left: -100%;
+        z-index: 1000;
+    }
+    .navigation.active{
+        width: 100%;
+        left: 0;
+
+    }
+    .toggle{
+        z-index: 10001;
+    }
+    main.active .toggle{
+        position: fixed;
+        right: 0;
+        left: initial;
+        color: var(--white);
     }
 }
